[workspace]
members = [
  "l1-1",
  "l1-2",
  "l1-5",
  "l1-6",
  "l1-7",
  "l1-8",
  "l1-9",
  "l2-1",
  "l2-3",
  "l2-4",
  "l2-5",
  "l2-6",
  "l2-7",
  "l2-9",
  "l2-10",
  "l2-11",
  "l2-12",
  "l2-13",
  "l2-15",
  "l2-17",
  "l2-20",
  "l2-21",
  "l2-22",
  "l2-23",
  "l2-24",
  "l2-25",
  "l2-34",
  "l2-35",
  "l3-1",
  "l3-6",
  "l3-7",
  "l3-9",
  "l3-10",
  "l3-11",
  "l3-13",
  "l3-14",
  "l3-16",
  "l3-17",
  "l3-19",
  "l3-22",
  "l3-24",
  "l3-25",
  "l4-1",
  "l4-4",
  "l4-7",
  "l4-8",
  "l4-9",
  "l4-16",
  "grep-lite",
  "filebasics"
]
